style.css
/* ... */
.contact-event_mail a {
  font-family: 'Lato', sans-serif;
  text-align: center;
}

.logo-info {
  background-color: white;
  padding-bottom: 10%;
}

.logo-info h2 {
  font-family: 'Lato', sans-serif;
  font-size: 3vw;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: relative;
  padding-top: 6%;
  padding-bottom: 3%;
  width: 50%;
  padding-left: 23%;
}

.logo-info h2::before {
  content: "";
  position: absolute;
  width: 10%;
  margin-top: 200px;
  height: 1px;
  bottom: 0;
  left: 63%;
  border-bottom: 1px solid #ec5242;
}

.history {
  background-color: #fff;
  padding-bottom: 8%;
}

.logo-info p,
.history p {
  font-family: 'Lato', sans-serif;
  font-size: 1.5vw;
  text-align: center;
  padding-top: 3%;
  padding-bottom: 3%;
  width: 50%;
  padding-left: 23%;
}

.logo-info_logo {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 5%;
  padding-bottom: 5%;
  width: 50%;
  padding-left: 23%;
}

.history h2 {
  font-family: 'Lato', sans-serif;
  font-size: 3vw;
  align-items: center;
  justify-content: center;
  text-align: center;
  position: relative;
  padding-top: 6%;
  padding-bottom: 3%;
  width: 50%;
  padding-left: 23%;
}

.history h2::before {
  content: "";
  position: absolute;
  width: 10%;
  height: 1px;
  bottom: 0;
  left: 63%;
  border-bottom: 1px solid #ec5242;
}

.history-cards {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 100%;
  padding-bottom: 50px;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 5%;
  font-family: 'Lato', sans-serif;
  font-weight: 700;
  text-align: center;
  color: #fff;
  font-size: 6vw;
}

#energy2019 {
  background-image: url(assets/images/congres1.png);
  background-repeat: no-repeat;
  background-size: 100%;
}

#energy2020 {
  background-image: url(assets/images/congres2.png);
  background-repeat: no-repeat;
  background-size: 100%;
}
/* ... */

